# autonomous-virtual-beings

./: README.md
code/fl/: .gitignore  AI.txt  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  test.py  verify.py
code/fl/assets/: README.md
code/fl/checkpoints/: OUTPUT.md  README.md
code/fl/data/: .gitignore  DATASET.md  README.md  capitalize_a_2cw-train.txt  capitalize_a_2cw-val.txt  cycle_16t_2cw-test.txt  cycle_16t_2cw-train.txt  cycle_16t_2cw-val.txt  cycle_2t_2cw-test.txt  cycle_2t_2cw-train.txt  cycle_2t_2cw-val.txt  cycle_2t_4cw-test.txt  cycle_2t_4cw-train.txt  cycle_2t_4cw-val.txt  cycle_32t_2cw-test.txt  cycle_32t_2cw-train.txt  cycle_32t_2cw-val.txt  cycle_4t_2cw-test.txt  cycle_4t_2cw-train.txt  cycle_4t_2cw-val.txt  cycle_4t_4cw-test.txt  cycle_4t_4cw-train.txt  cycle_4t_4cw-val.txt  cycle_8t_2cw-test.txt  cycle_8t_2cw-train.txt  cycle_8t_2cw-val.txt  dataset.md  sample-train.txt  sample-train2.txt  sample-val.txt  sample-val2.txt
code/fl/docs/: code_architecture.md  design.md  model_architecture.md
code/fl/docs/results/: capitalize_a_2cw.ckpt  capitalize_a_2cw.md  (+25 more)
code/fl/examples/: inference.py  test_cycling.py  train.py
code/fl/fluctlight/: __init__.py  cli.py  dataset.py  model.py  utils.py  visualization.py
code/fl/tests/: __init__.py  test_dataset.py  test_device.py  test_model.py  test_utils.py
code/fl/training/: capitalize.py  capitalize_a_2cw.py  cycle_16t_2cw.py  cycle_2t_2cw.py  cycle_2t_4cw.py  cycle_32t_2cw.py  cycle_4t_2cw.py  cycle_4t_4cw.py  cycle_8t_2cw.py
code/fl/utils/: debug-checkpoint.py  inspector.py
(+127 files in other folders)
